- adds permissions to workflow due to policy changes

--- a/.github/workflows/regen-clients.yml
+++ b/.github/workflows/regen-clients.yml
@@ -6,6 +6,11 @@ on:
     - cron: '0 13 * * 1-5'
   workflow_dispatch:
 
+permissions:
+  contents: write
+  pull-requests: write
+  issues: write
+
 jobs:
   generate:
 
