--- a/.github/workflows/get-started-java.yml
+++ b/.github/workflows/get-started-java.yml
@@ -32,11 +32,9 @@ jobs:
         distribution: 'temurin'
     - name: Make gradlew executable
       run: chmod +x ./gradlew
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@v3
-      with:
-        build-root-directory: get-started/azure-auth/java/
-        arguments: build
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
+    - run: get-started/azure-auth/java/gradlew build
 
   build-quickstart:
 
@@ -55,8 +53,6 @@ jobs:
         distribution: 'temurin'
     - name: Make gradlew executable
       run: chmod +x ./gradlew
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@v3
-      with:
-        build-root-directory: get-started/quickstart/java/
-        arguments: build
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
+    - run: get-started/quickstart/java/gradlew build
