- adds missing file filter and workflow dispatch

--- a/.github/workflows/get-started-java.yml
+++ b/.github/workflows/get-started-java.yml
@@ -13,6 +13,8 @@ on:
     paths:
       - 'get-started/azure-auth/java/**'
       - 'get-started/quickstart/java/**'
+      - '.github/**'
+  workflow_dispatch:
 
 jobs:
   build-azure:
