--- a/.github/workflows/get-started-java.yml
+++ b/.github/workflows/get-started-java.yml
@@ -33,10 +33,10 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
     - name: Make gradlew executable
-      run: chmod +x ./gradlew
+      run: chmod +x ./get-started/quickstart/java/gradlew
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
-    - run: get-started/azure-auth/java/gradlew build
+    - run: ./get-started/azure-auth/java/gradlew build
 
   build-quickstart:
 
@@ -54,7 +54,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
     - name: Make gradlew executable
-      run: chmod +x ./gradlew
+      run: chmod +x ./get-started/quickstart/java/gradlew
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
-    - run: get-started/quickstart/java/gradlew build
+    - run: ./get-started/quickstart/java/gradlew build
