--- a/.github/workflows/get-started-java.yml
+++ b/.github/workflows/get-started-java.yml
@@ -13,6 +13,8 @@ on:
     paths:
       - 'get-started/azure-auth/java/**'
       - 'get-started/quickstart/java/**'
+      - '.github/**'
+  workflow_dispatch:
 
 jobs:
   build-azure:
@@ -32,11 +34,9 @@ jobs:
         distribution: 'temurin'
     - name: Make gradlew executable
       run: chmod +x ./gradlew
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@v3
-      with:
-        build-root-directory: get-started/azure-auth/java/
-        arguments: build
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
+    - run: ./gradlew build
 
   build-quickstart:
 
@@ -55,8 +55,6 @@ jobs:
         distribution: 'temurin'
     - name: Make gradlew executable
       run: chmod +x ./gradlew
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@v3
-      with:
-        build-root-directory: get-started/quickstart/java/
-        arguments: build
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
+    - run: ./gradlew build
