--- a/petstore/java/utilities/build.gradle
+++ b/petstore/java/utilities/build.gradle
@@ -20,6 +20,8 @@ dependencies {
     implementation 'com.microsoft.kiota:microsoft-kiota-serialization-json:0.12.2'
     implementation 'com.microsoft.kiota:microsoft-kiota-serialization-text:0.12.2'
     implementation 'com.microsoft.kiota:microsoft-kiota-serialization-form:0.12.2'
+    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-multipart:0.12.2'
+    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
     api 'com.azure:azure-identity:1.11.1'
     api 'com.squareup.okhttp3:okhttp:4.12.0'
     api 'com.google.code.gson:gson:2.10.1'
