--- a/petstore/typescript/package.json
+++ b/petstore/typescript/package.json
@@ -29,6 +29,7 @@
     "@microsoft/kiota-http-fetchlibrary": "^1.0.0-preview.39",
     "@microsoft/kiota-serialization-form": "^1.0.0-preview.29",
     "@microsoft/kiota-serialization-json": "^1.0.0-preview.40",
+    "@microsoft/kiota-serialization-multipart": "^1.0.0-preview.19",
     "@microsoft/kiota-serialization-text": "^1.0.0-preview.37",
     "express": "^4.18.1",
     "node-fetch": "^2.7.0"
