validate documentation warnings.

--- a/msgraph-mail/dotnet/dotnet.csproj
+++ b/msgraph-mail/dotnet/dotnet.csproj
@@ -13,10 +13,12 @@
     </PackageReference>
   </ItemGroup>
   <PropertyGroup>
+    <DocumentationFile>bin\Release\dotnet.xml</DocumentationFile>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
 </Project>
