--- a/.github/workflows/get-started-dotnet.yml
+++ b/.github/workflows/get-started-dotnet.yml
@@ -24,6 +24,7 @@ jobs:
   build-azure-dotnet:
 
     runs-on: ubuntu-latest
+    needs: []
 
     steps:
     - uses: actions/checkout@v4
@@ -42,6 +43,7 @@ jobs:
   build-azure-cli:
 
     runs-on: ubuntu-latest
+    needs: []
 
     steps:
     - uses: actions/checkout@v4
@@ -60,6 +62,7 @@ jobs:
   build-dotnet-dependency-injection:
 
     runs-on: ubuntu-latest
+    needs: []
 
     steps:
     - uses: actions/checkout@v4
@@ -78,6 +81,7 @@ jobs:
   build-quickstart-dotnet:
 
     runs-on: ubuntu-latest
+    needs: []
 
     steps:
     - uses: actions/checkout@v4
@@ -99,6 +103,7 @@ jobs:
   build-quickstart-cli:
 
     runs-on: ubuntu-latest
+    needs: []
 
     steps:
     - uses: actions/checkout@v4
