--- a/.github/workflows/get-started-php.yml
+++ b/.github/workflows/get-started-php.yml
@@ -22,6 +22,7 @@ jobs:
         working-directory: get-started/azure-auth/php/
 
     runs-on: ubuntu-latest
+    needs: []
 
     steps:
     - uses: actions/checkout@v4
@@ -51,6 +52,7 @@ jobs:
         working-directory: get-started/quickstart/php/
 
     runs-on: ubuntu-latest
+    needs: []
 
     steps:
     - uses: actions/checkout@v4
