--- a/.github/workflows/get-started-python.yml
+++ b/.github/workflows/get-started-python.yml
@@ -22,6 +22,7 @@ jobs:
         working-directory: get-started/azure-auth/python/
 
     runs-on: ubuntu-latest
+    needs: []
 
     strategy:
       matrix:
@@ -52,6 +53,7 @@ jobs:
         working-directory: get-started/quickstart/python/
 
     runs-on: ubuntu-latest
+    needs: []
 
     strategy:
       matrix:
