--- a/.github/workflows/get-started-ruby.yml
+++ b/.github/workflows/get-started-ruby.yml
@@ -20,6 +20,7 @@ jobs:
         working-directory: get-started/azure-auth/ruby/
 
     runs-on: ubuntu-latest
+    needs: []
 
     steps:
     - uses: actions/checkout@v4
