--- a/.github/workflows/get-started.go.yml
+++ b/.github/workflows/get-started.go.yml
@@ -22,6 +22,7 @@ jobs:
         working-directory: get-started/azure-auth/go/
 
     runs-on: ubuntu-latest
+    needs: []
 
     steps:
     - uses: actions/checkout@v4
@@ -41,6 +42,7 @@ jobs:
         working-directory: get-started/quickstart/go/
 
     runs-on: ubuntu-latest
+    needs: []
 
     steps:
     - uses: actions/checkout@v4
