--- a/.github/workflows/get-started-dotnet.yml
+++ b/.github/workflows/get-started-dotnet.yml
@@ -60,6 +60,9 @@ jobs:
       working-directory: get-started/azure-auth/cli/src/
 
   build-dotnet-dependency-injection:
+    defaults:
+      run:
+        working-directory: get-started/dotnet-dependency-injection/
 
     runs-on: ubuntu-latest
     needs: []
@@ -73,10 +76,8 @@ jobs:
 
     - name: Restore dependencies dotnet-dependency-injection
       run: dotnet restore ./dotnet-dependency-injection.sln
-      working-directory: get-started/dotnet-dependency-injection/
     - name: Build dotnet-dependency-injection
       run: dotnet build ./dotnet-dependency-injection.sln --no-restore
-      working-directory: get-started/dotnet-dependency-injection/
 
   build-quickstart-dotnet:
 
