--- a/get-started/azure-auth/java/app/build.gradle
+++ b/get-started/azure-auth/java/app/build.gradle
@@ -26,13 +26,8 @@ dependencies {
 
     // <DependenciesSnippet>
     implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0'
-    implementation 'com.microsoft.kiota:microsoft-kiota-abstractions:1.4.0'
+    implementation 'com.microsoft.kiota:microsoft-kiota-bundle:1.4.0'
     implementation 'com.microsoft.kiota:microsoft-kiota-authentication-azure:1.4.0'
-    implementation 'com.microsoft.kiota:microsoft-kiota-http-okHttp:1.4.0'
-    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-json:1.4.0'
-    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-text:1.4.0'
-    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-form:1.4.0'
-    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-multipart:1.4.0'
     implementation 'com.azure:azure-identity:1.13.2'
     // </DependenciesSnippet>
 }
