--- a/get-started/quickstart/cli/src/KiotaPostsCLI.csproj
+++ b/get-started/quickstart/cli/src/KiotaPostsCLI.csproj
@@ -8,13 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Kiota.Abstractions" Version="1.12.4" />
+    <PackageReference Include="Microsoft.Kiota.Bundle" Version="1.12.4" />
     <PackageReference Include="Microsoft.Kiota.Cli.Commons" Version="1.1.2" />
-    <PackageReference Include="Microsoft.Kiota.Http.HttpClientLibrary" Version="1.12.4" />
-    <PackageReference Include="Microsoft.Kiota.Serialization.Form" Version="1.12.4" />
-    <PackageReference Include="Microsoft.Kiota.Serialization.Json" Version="1.12.4" />
-    <PackageReference Include="Microsoft.Kiota.Serialization.Multipart" Version="1.12.4" />
-    <PackageReference Include="Microsoft.Kiota.Serialization.Text" Version="1.12.4" />
   </ItemGroup>
 
 </Project>
