--- a/get-started/quickstart/dotnet/src/KiotaPosts.csproj
+++ b/get-started/quickstart/dotnet/src/KiotaPosts.csproj
@@ -8,12 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Kiota.Abstractions" Version="1.12.4" />
-    <PackageReference Include="Microsoft.Kiota.Http.HttpClientLibrary" Version="1.12.4" />
-    <PackageReference Include="Microsoft.Kiota.Serialization.Form" Version="1.12.4" />
-    <PackageReference Include="Microsoft.Kiota.Serialization.Json" Version="1.12.4" />
-    <PackageReference Include="Microsoft.Kiota.Serialization.Multipart" Version="1.12.4" />
-    <PackageReference Include="Microsoft.Kiota.Serialization.Text" Version="1.12.4" />
+    <PackageReference Include="Microsoft.Kiota.Bundle" Version="1.12.4" />
   </ItemGroup>
 
 </Project>
