--- a/get-started/quickstart/java/app/build.gradle
+++ b/get-started/quickstart/java/app/build.gradle
@@ -25,12 +25,7 @@ dependencies {
 
     // <DependenciesSnippet>
     implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0'
-    implementation 'com.microsoft.kiota:microsoft-kiota-abstractions:1.4.0'
-    implementation 'com.microsoft.kiota:microsoft-kiota-http-okHttp:1.4.0'
-    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-json:1.4.0'
-    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-text:1.4.0'
-    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-form:1.4.0'
-    implementation 'com.microsoft.kiota:microsoft-kiota-serialization-multipart:1.4.0'
+    implementation 'com.microsoft.kiota:microsoft-kiota-bundle:1.4.0'
     // </DependenciesSnippet>
 }
 
