--- a/get-started/quickstart/typescript/package.json
+++ b/get-started/quickstart/typescript/package.json
@@ -9,16 +9,11 @@
   },
   "author": "",
   "license": "MIT",
-  "dependencies": {
-    "@microsoft/kiota-abstractions": "^1.0.0-preview.66",
-    "@microsoft/kiota-http-fetchlibrary": "^1.0.0-preview.65",
-    "@microsoft/kiota-serialization-form": "^1.0.0-preview.54",
-    "@microsoft/kiota-serialization-json": "^1.0.0-preview.66",
-    "@microsoft/kiota-serialization-multipart": "^1.0.0-preview.44",
-    "@microsoft/kiota-serialization-text": "^1.0.0-preview.63"
-  },
   "devDependencies": {
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "@microsoft/kiota-bundle": "^1.0.0-preview.9"
   }
 }
