fix: java generation scripts to avoid differences

--- a/.github/workflows/regen-clients.yml
+++ b/.github/workflows/regen-clients.yml
@@ -34,7 +34,7 @@ jobs:
       run: kiota generate -l Go -c PostsClient -n kiota_posts/client -d ../posts-api.yml -o ./client --co
     - name: Regenerate Java quickstart
       working-directory: get-started/quickstart/java
-      run: kiota generate -l Java -c PostsClient -n kiotaposts.client -d ../posts-api.yml -o ./app/src/main/java/kiotaposts/client --co
+      run: kiota generate -l Java -c PostsClient -n kiotaposts.client -d ../posts-api.yml -o ./app/src/main/java/kiotaposts/client --co -s none --ds none
     - name: Regenerate PHP quickstart
       working-directory: get-started/quickstart/php
       run: kiota generate -l PHP -c PostsApiClient -n KiotaPosts\\Client -d ../posts-api.yml -o ./client --co
@@ -57,7 +57,7 @@ jobs:
       run: kiota generate -l Go -c GraphApiClient -n getuser/client -d ../get-me.yml -o ./client --co
     - name: Regenerate Java Azure auth app
       working-directory: get-started/azure-auth/java
-      run: kiota generate -l Java -c GetUserApiClient -n getuserclient.apiclient -d ../get-me.yml -o ./app/src/main/java/getuserclient/apiclient --co
+      run: kiota generate -l Java -c GetUserApiClient -n getuserclient.apiclient -d ../get-me.yml -o ./app/src/main/java/getuserclient/apiclient --co -s none --ds none
     - name: Regenerate PHP Azure auth app
       working-directory: get-started/azure-auth/php
       run: kiota generate -l PHP -c GraphApiClient -n GetUser\\Client -d ../get-me.yml -o ./client --co
