--- a/msgraph-mail/typescript/package.json
+++ b/msgraph-mail/typescript/package.json
@@ -1,51 +1,22 @@
 {
   "name": "node-typescript-starter",
   "version": "1.0.0",
-  "author": "Freek Mencke",
-  "homepage": "https://twitter.com/FreekMencke",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/FreekMencke/node-typescript-starter"
-  },
   "license": "MIT",
+  "main": "out/main.js",
   "scripts": {
-    "start:ci": "node ./dist/node-typescript-starter",
-    "start:dev": "node --inspect ./dist/node-typescript-starter",
-    "build:dev": "webpack --env development",
-    "start": "webpack --progress --env development --env nodemon",
-    "start:prod": "webpack --progress --env nodemon",
-    "build:prod": "webpack --progress",
-    "build:ci": "webpack",
-    "build:docker": "docker build --rm -t toxsickcoder/node-typescript-starter:latest .",
-    "deploy:docker": "sh ./scripts/deploy.sh",
-    "analyse:dev": "webpack --progress --env development --env analyse && start dist/report.html",
-    "analyse:prod": "webpack --progress --env analyse && start dist/report.html",
-    "lint": "eslint . --ext .ts"
+    "build": "npx tsc",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run build && node out/main.js"
   },
   "dependencies": {
     "@azure/identity": "^4.5.0",
-    "@microsoft/kiota-abstractions": "^1.0.0-preview.74",
     "@microsoft/kiota-authentication-azure": "^1.0.0-preview.74",
-    "@microsoft/kiota-http-fetchlibrary": "^1.0.0-preview.74",
-    "@microsoft/kiota-serialization-form": "^1.0.0-preview.74",
-    "@microsoft/kiota-serialization-json": "^1.0.0-preview.74",
-    "@microsoft/kiota-serialization-multipart": "^1.0.0-preview.74",
-    "@microsoft/kiota-serialization-text": "^1.0.0-preview.74",
-    "express": "^5.0.1"
+    "@microsoft/kiota-bundle": "^1.0.0-preview.74"
   },
   "devDependencies": {
+    "@tsconfig/node20": "^20.1.4",
     "@types/node": "^22.9.0",
-    "@typescript-eslint/eslint-plugin": "^8.13.0",
-    "@typescript-eslint/parser": "^8.13.0",
-    "clean-webpack-plugin": "^4.0.0",
-    "eslint": "^8.57.1",
-    "nodemon-webpack-plugin": "^4.8.2",
-    "raw-loader": "^4.0.2",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.6.3",
-    "web-streams-polyfill": "^4.0.0",
-    "webpack": "^5.96.1",
-    "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-cli": "^5.1.4"
-  }
+    "typescript": "^5.6.3"
+  },
+  "type": "module"
 }
