--- a/get-started/quickstart/typescript/package.json
+++ b/get-started/quickstart/typescript/package.json
@@ -2,18 +2,21 @@
   "name": "kiota-posts",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "out/index.js",
   "scripts": {
     "build": "npx tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run build && node out/index.js"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "ts-node": "^10.9.2",
+    "@tsconfig/node20": "^20.1.4",
+    "@types/node": "^22.9.0",
     "typescript": "^5.6.3"
   },
   "dependencies": {
     "@microsoft/kiota-bundle": "^1.0.0-preview.74"
-  }
+  },
+  "type": "module"
 }
