chore: adds engines definition
Signed-off-by: Vincent Biret <vibiret@microsoft.com>

--- a/msgraph-mail/typescript/package.json
+++ b/msgraph-mail/typescript/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "license": "MIT",
   "main": "out/main.js",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
