--- a/get-started/quickstart/typescript/package.json
+++ b/get-started/quickstart/typescript/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "out/index.js",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
